test/TestPhases/namecheck/invalid/shadowing.blc
module

activity f()
    var x: int32
    var x: bool
    do
        var x: int32
        do 
            var x:int32
        end
    end
end
